testsuite/tests/properties/invalid_let/test.out
== Correct code ==
Code generation was successful

== Missing var value ==
test.py:21: error: All Let expression function arguments must have default values

== Invalid args ==
test.py:21: error: Invalid function for Let expression (*args and **kwargs not accepted)

Done
